<resources>
    <string name="app_name">HumansVsGoblins_Android</string>
    <string name="titleScreen_TitleText">Humans Vs Goblins</string>
    <string name="titleScreen_StartButton">Start Game</string>


    <string name="introText">You Wake up in a strange land...\n\nAfter finding fellow humans in this strange land you find that the human race has been nearly wiped out...\n\nYou are told GOBLINS are responsible!\n\nIt is up to you to save the human race from goblin menace!</string>
    <string name="introUserNameInput">Enter Your Name</string>
    <string name="submitUserNameInputBtn">Enter</string>
    <string name="PlayerInputPrompt">What is your name human?</string>


    <string name="upBtnText">ᐃ</string>
    <string name="downBtnText">ᐁ</string>
    <string name="leftBtnText">ᐊ</string>
    <string name="rightBtnText">ᐅ</string>
    <string name="tileMapCanvasContentDescriptionText">tileMapCanvas</string>
    <string name="humanObj_name">Human Name</string>
    <string name="humanObj_health">Human Health</string>
    <string name="humanObj_strength">Human Strength</string>
    <string name="humanObj_lives">Human Lives</string>
    <string name="humanicon">HumanIcon</string>
    <string name="guy">GUY</string>
    <string name="goblincounttext">goblinCountText</string>
    <string name="goblin_nameTXT">Goblin Name</string>
    <string name="goblin_strengthTXT">goblin strength</string>
    <string name="goblin_healthTXT">Goblin health</string>
    <string name="a_attack_d_dodge">A - Attack    D - Dodge</string>
    <string name="game_overText">Game Over</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>