<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wood"
    tools:context=".GameBoardActivity"
    tools:ignore="MissingDefaultResource">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/deepBlue"
        android:contentDescription="@string/humanicon"
        app:layout_constraintBottom_toTopOf="@+id/tileMapTable"
        app:layout_constraintEnd_toStartOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dummy" />

    <TableLayout
        android:id="@+id/tileMapTable"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="72dp"
        android:background="@color/forestGreen"
        app:layout_constraintBottom_toTopOf="@+id/upBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/downBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="25dp"
        android:text="@string/downBtnText"
        android:textColor="#37D49C24"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/upBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="28dp"
        android:text="@string/upBtnText"
        android:textColor="#37D49C24"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileMapTable"
        tools:ignore="TextContrastCheck"
        tools:text="@string/upBtnText" />

    <Button
        android:id="@+id/leftBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="25dp"
        android:text="@string/leftBtnText"
        android:textColor="#37D49C24"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        app:layout_constraintEnd_toStartOf="@+id/rightBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/rightBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="140dp"
        android:text="@string/rightBtnText"
        android:textColor="#37D49C24"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toEndOf="@+id/leftBtn"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="TextContrastCheck" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="25dp"
        android:background="@color/lightFleshTone"
        android:padding="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/upBtn"
        app:layout_constraintEnd_toStartOf="@+id/goblinImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileMapTable"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/battleView"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:paddingRight="25sp"
                android:text="@string/battleText"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/gObjStats"
                android:layout_width="151dp"
                android:layout_height="match_parent"
                android:text="@string/gObjStats"
                android:textAlignment="textEnd"
                android:textColor="@color/deepBlue"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:background="@color/lightFleshTone"
        android:paddingLeft="25sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        app:layout_constraintBottom_toTopOf="@+id/tileMapTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hObjNameTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="25sp"
                android:text="@string/humanObj_name"
                android:textAlignment="viewStart"
                android:textColor="@color/deepBlue"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/hObjHealthTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="25sp"
                android:text="@string/humanObj_health"
                android:textAlignment="viewStart"
                android:textColor="@color/brickRed"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/hObjStrengthTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="15sp"
                android:text="@string/humanObj_strength"
                android:textAlignment="viewStart"
                android:textColor="@color/medFleshTone"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hObjLivesTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="25sp"
                android:text="@string/humanObj_lives"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/goblinCountTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="25sp"
                android:text="@string/goblincounttext"
                android:textAlignment="viewStart"
                android:textColor="@color/forestGreen"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/goblinImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/smokeOrange"
        android:contentDescription="@string/humanicon"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/upBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tileMapTable"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/goblin" />

</androidx.constraintlayout.widget.ConstraintLayout>