<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSage"
    tools:context=".BattleSceneActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@color/brickRed"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout4"
        app:layout_constraintEnd_toStartOf="@+id/goblinBattleStatsTable"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        app:srcCompat="@drawable/goblin" />

    <TableLayout
        android:id="@+id/goblinBattleStatsTable"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:background="@color/lightFleshTone"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/goblinNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="goblin name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/goblinHealthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="goblinHealth" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/goblinStengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="goblinStrength" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="428dp"
        android:background="@color/deepBlue"
        android:contentDescription="TODO"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/dummy"
        tools:srcCompat="@drawable/dummy" />

    <TableLayout
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="428dp"
        android:background="@color/lightFleshTone"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hObjNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humanObj_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hObjHealthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humanObj_health" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hObjStrengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humanObj_strength"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hObjLivesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humanObj_lives"
                android:textAlignment="viewStart" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>